# mac_capture

./: .gitignore  README.md  RUNNING_GUIDE.md  pyproject.toml
MacCaptureApp/: capture_app.py
